# stm32-cmake-cmsis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: arm-none-eabi.cmake  cmsis.cmake
src/: main.c
